test/extern/bradc/classes/extern_subclasses.good
extern_subclasses.chpl:5: syntax error: near 'C2'
